	PR c/18239 	* c-decl.c (get_parm_info): Allow FUNCTION_DECLs to appear amongst 	parameter declarations.

testsuite:
	* gcc.dg/parm-impl-decl-1.c, gcc.dg/parm-impl-decl-2.c: New tests.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@89956 138bc75d-0d04-0410-961f-82ee72b054a4